Prevent horizontal scrollbars

--- a/src/assets/styles/layout/page/_page.scss
+++ b/src/assets/styles/layout/page/_page.scss
@@ -16,6 +16,7 @@ body {
 .page_container {
     & {
         min-height: 100%;
+        overflow: hidden;
         position: relative;
         width: 100%;
     }
